# instagridder

./: .gitignore  README.md  pyproject.toml
app/: app.py  gobals.py
app/static/css/: custom-style.css
app/static/js/: drag-drop.js
app/templates/: base.html  index.html
